@@ -93,7 +93,7 @@ open_rawlog (struct server *serv)
 
 	snprintf (tbuf, sizeof tbuf, _("X-Chat: Rawlog (%s)"), serv->servername);
 	serv->gui->rawlog_window =
-		mg_create_generic_tab ("rawlog", tbuf, FALSE, TRUE, close_rawlog, serv,
+		mg_create_generic_tab ("RawLog", tbuf, FALSE, TRUE, close_rawlog, serv,
 							 640, 320, &vbox, serv);
 
 	hbox = gtk_hbox_new (FALSE, 2);
